[package]
name = "xcosm"
version = "0.0.2"
authors = ["mintthemoon <mint@mintthemoon.xyz>"]
categories = ["authentication", "config", "cryptography::cryptocurrencies", "finance", "wasm"]
edition = "2021"
keywords = ["cosmos", "cosmwasm", "cosmwasm-std", "library", "contract"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/mintthemoon/xcosm"
description = "The CosmWasm contract toolbox."

[lib]

[features]
default = ["cosmwasm_2_0"]
cosmwasm_2_0 = []

[dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
